@@ -1,2 +1,3 @@
 WARNING: bad-data.pdf (file position 319): error decoding stream data for object 4 0: LZWDecoder: bad code received
+WARNING: bad-data.pdf (file position 319): stream will be re-processed without filtering to avoid data loss
 qpdf: operation succeeded with warnings; resulting file may have some problems
