@@ -3,3 +3,4 @@ PDF Version: 1.3
 File is not encrypted
 File is not linearized
 WARNING: bad-jpeg.pdf (file position 735): error decoding stream data for object 6 0: Not a JPEG file: starts with 0x77 0x77
+WARNING: bad-jpeg.pdf (file position 735): stream will be re-processed without filtering to avoid data loss
