@@ -3,3 +3,4 @@ PDF Version: 1.3
 File is not encrypted
 File is not linearized
 WARNING: damaged-stream.pdf (file position 426): error decoding stream data for object 5 0: LZWDecoder: bad code received
+WARNING: damaged-stream.pdf (file position 426): stream will be re-processed without filtering to avoid data loss
