@@ -3,6 +3,7 @@ PDF Version: 1.3
 File is not encrypted
 File is not linearized
 WARNING: split-content-stream-errors.pdf (file position 557): error decoding stream data for object 6 0: LZWDecoder: bad code received
+WARNING: split-content-stream-errors.pdf (file position 557): stream will be re-processed without filtering to avoid data loss
 WARNING: content stream: ignoring non-stream while parsing content streams
 WARNING: split-content-stream-errors.pdf (file position 557): error decoding stream data for object 6 0: LZWDecoder: bad code received
 WARNING: content stream (content stream object 6 0): errors while decoding content stream
